--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb+srv://namratateshwer:fYlQSVQFw9Z4aPcL@cluster0.bhtwugh.mongodb.net/ecommerceApp?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://namratateshwer:J6gMKaci0Hxk2pgF@cluster0.39m6uoj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 SECRET = OurSecret
