--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,6 +20,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "method-override": "^3.0.0",
+    "mongodb": "^5.1.0",
     "mongoose": "^8.13.1",
     "passport": "^0.7.0",
     "passport-local-mongoose": "^8.0.0"
