--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "mongoose": "^8.13.1",
     "passport": "^0.7.0",
     "passport-local-mongoose": "^8.0.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
